tests/baselines/reference/functionSignatureAssignmentCompat1.errors.txt
functionSignatureAssignmentCompat1.ts(9,21): error TS2454: Variable 'parsers' is used before being assigned.
functionSignatureAssignmentCompat1.ts(10,21): error TS2454: Variable 'parsers' is used before being assigned.
functionSignatureAssignmentCompat1.ts(10,21): error TS2322: Type '(delimiter?: string | undefined) => ParserFunc' is not assignable to type 'ParserFunc'.
  Types of parameters 'delimiter' and 'eventEmitter' are incompatible.
    Type 'number' is not assignable to type 'string'.
functionSignatureAssignmentCompat1.ts(11,21): error TS2454: Variable 'parsers' is used before being assigned.


==== functionSignatureAssignmentCompat1.ts (4 errors) ====
    interface ParserFunc {
        (eventEmitter: number, buffer: string): void;
    }
    interface Parsers {
        raw: ParserFunc;
        readline(delimiter?: string): ParserFunc;
    }
    var parsers: Parsers;
    var c: ParserFunc = parsers.raw; // ok!
                        ~~~~~~~
!!! error TS2454: Variable 'parsers' is used before being assigned.
    var d: ParserFunc = parsers.readline; // not ok
                        ~~~~~~~
!!! error TS2454: Variable 'parsers' is used before being assigned.
                        ~~~~~~~~~~~~~~~~
!!! error TS2322: Type '(delimiter?: string | undefined) => ParserFunc' is not assignable to type 'ParserFunc'.
!!! error TS2322:   Types of parameters 'delimiter' and 'eventEmitter' are incompatible.
!!! error TS2322:     Type 'number' is not assignable to type 'string'.
!!! related TS6212 functionSignatureAssignmentCompat1.ts:10:21: Did you mean to call this expression?
    var e: ParserFunc = parsers.readline(); // ok
                        ~~~~~~~
!!! error TS2454: Variable 'parsers' is used before being assigned.